--- a/.github/workflows/call-detekt-validation.yml
+++ b/.github/workflows/call-detekt-validation.yml
@@ -1,21 +1,20 @@
-name: "tests"
+name: "detekt-validation"
 on:
   workflow_call:
-
 jobs:
-  tests:
-    name: "Run tests"
+  detekt:
+    name: "Check project by detekt"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Set up JDK 1.21
+      - name: Set up JDK 1.17
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: '21'
+          java-version: '17'
       - name: Give gradle permission
         run: chmod +x gradlew
-      - name: Run tests
+      - name: detekt
         uses: gradle/gradle-build-action@v3
         with:
-          arguments: test
+          arguments: detekt
