--- a/.github/workflows/call-tests-validation.yml
+++ b/.github/workflows/call-tests-validation.yml
@@ -1,20 +1,25 @@
-name: "detekt-validation"
+name: "Tests"
 on:
   workflow_call:
+
 jobs:
-  detekt:
-    name: "Check project by detekt"
+  tests:
+    strategy:
+      matrix:
+        target:
+          - "allTests"
+    name: "Run tests"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Set up JDK 1.21
+      - name: Set up JDK 1.17
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: '21'
+          java-version: '17'
       - name: Give gradle permission
         run: chmod +x gradlew
-      - name: detekt
+      - name: Run tests
         uses: gradle/gradle-build-action@v3
         with:
-          arguments: detekt
+          arguments: ${{ matrix.target }} --stacktrace
