--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,11 +1,11 @@
 name: Pull request
 on:
-  merge_group:
   pull_request:
     branches:
       - 'develop'
       - 'master'
       - 'prerelease/*'
+
 
 # Concurrency strategy:
 #   github.workflow: distinguish this workflow from others
@@ -23,15 +23,21 @@ concurrency:
 jobs:
   gradle_validation:
     name: Validate gradle wrapper
-    uses: ./.github/workflows/gradle-wrapper-validation.yml
+    uses: ./.github/workflows/call-gradle-wrapper-validation.yml
   detekt_validation:
     name: Check by detekt
     needs: gradle_validation
-    uses: ./.github/workflows/detekt-validation.yml
+    uses: ./.github/workflows/call-detekt-validation.yml
   tests_validation:
     needs: gradle_validation
-    uses: ./.github/workflows/tests-validation.yml
-  build:
-    name: Build project
-    needs: [ gradle_validation, detekt_validation, tests_validation ]
-    uses: ./.github/workflows/build-project.yml
+    uses: ./.github/workflows/call-tests-validation.yml
+  publish_validation:
+    name: Check publish
+    needs: gradle_validation
+    uses: ./.github/workflows/call-publish-validation.yml
+    secrets:
+      ORG_GRADLE_PROJECT_MAVENCENTRALUSERNAME: ${{ secrets.ORG_GRADLE_PROJECT_MAVENCENTRALUSERNAME }}
+      ORG_GRADLE_PROJECT_MAVENCENTRALPASSWORD: ${{ secrets.ORG_GRADLE_PROJECT_MAVENCENTRALPASSWORD }}
+      ORG_GRADLE_PROJECT_SIGNINGINMEMORYKEY: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGINMEMORYKEY }}
+      ORG_GRADLE_PROJECT_SIGNINGINMEMORYKEYID: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGINMEMORYKEYID }}
+      ORG_GRADLE_PROJECT_SIGNINGINMEMORYKEYPASSWORD: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGINMEMORYKEYPASSWORD }}
